  strings local rather than global. (RFB)
- vdi/vdi_text.c: Code cleanup: save space & simplify. (RFB)
- doc/status.txt: Updated status of VDI calls and AES calls. (RFB)

2012-07-06
- aes/crysbind.h aes/gemsuper.c: Differentiate between TOS and PC-GEM AES
  functions with the same opcode. (RFB)

2012-07-07
- aes/gemsuper.c: Fixed crysbind() warning about control signedness. (VRI)
- tools/mkrom.c: Added Amiga ROM checksum fixup. (VRI)
- bios/processor.S: Changed 68060 detection for buggy WinUAE. (VRI)
- .cvsignore, Makefile, doc/readme-amiga.txt: Renamed the Amiga ROM to
  emutos-amiga.rom. (VRI)
- .cvsignore Makefile release.mk doc/readme-amiga.txt tools/mkrom.c: Added
  support for EmuTOS as an Amiga 1000 Kickstart disk. (VRI)
- bios/ide.c: Quick hack to avoid infinite loop on Amiga 1000 hardware. (VRI)

2012-07-08
- aes/gemmnlib.c aes/gemsclib.c aes/gemshlib.c aes/gemsuper.c
  include/config.h: Added CONF_WITH_PCGEM to enable PC-GEM-only AES
  calls. (RFB)
- Makefile desk/desktop.def desk/desktop.dfn: Replaced .dfn file with
  equivalent .def file. (RFB)
- bios/startup.S: Fixed entry point address for BlizKick compatibility. (VRI)

2012-07-09
- tools/erd.c: Fix EmuTOS compile error when TARGET_192 and DESK1 are
  defined at the same time. (RFB)
- bios/amiga.c bios/amiga.h bios/clock.c: Added support for Amiga real-time
  clocks. (VRI)

2012-07-10
- desk/deskapp.c: Removed unnecessary parsing of lines from desktop
  resource while processing emudesk.inf. (RFB)
- desk/deskapp.c: Validate icon number when reading EMUDESK.INF. (RFB)
- bios/amiga.c bios/amiga.h bios/bios.c bios/kprint.c include/config.h:
  Added kprintf() support for UAE. (VRI)
- bios/amiga.c bios/amiga.h bios/bios.c: Added shutdown support for UAE. (VRI)

2012-07-16
- bios/amiga.c: Added support for Zorro II / Zorro III Fast RAM. (VRI)

2012-07-17
- bios/amiga.c bios/amiga.h bios/amiga2.S: Added support for A3000/A4000
  motherboard RAM. (VRI)