@@ -3835,3 +3835,4 @@ Start... early ages
 2012-07-17
 - bios/amiga.c bios/amiga.h bios/amiga2.S: Added support for A3000/A4000
   motherboard RAM. (VRI)
+- bios/amiga.c: Added check for 32-bit address bus. (VRI)
